--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
